# utilbot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cache.rs  events.rs  main.rs
src/commands/: chat.rs  help.rs  info.rs  mod.rs  osrs.rs  ping.rs  repeat.rs  roll.rs
src/markov/: markov.rs  markovsaver.rs  mod.rs
src/markov_tools/: markov.rs  markovsaver.rs  mod.rs
src/utls/: constants.rs  discordhelpers.rs  mod.rs  osrsutils.rs
