[package]
name = "utilbot"
description = "A general purpose utility bot composed of random (and potentially useless) commands"
version = "1.0.2"
authors = ["Michael Flaherty (Headline#9999)"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10" }
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.3"
serde = { version = "1.0.*", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"] }
markov = "1.1.0"
regex = "1.4.2"
rand = "0.8.0"
lru-cache = "0.1"
string-builder = "0.2"
rouler = "0.2.1"

[dependencies.serenity]
version = "0.9"
default-features = false
features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils", "rustls_backend"]